# spartan

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  spartan.h
